Brands & New Section

--- a/index.html
+++ b/index.html
@@ -69,6 +69,53 @@
         </div>
     </section>
     <!-- End Home -->
+
+    <!-- Brand -->
+    <section id="brand" class="container">
+        <div class="row">
+            <img src="assets/img/brand1.png" alt="" class="img-fluid col-lg-3 col-md-6 col-sm-12">
+            <img src="assets/img/brand2.png" alt="" class="img-fluid col-lg-3 col-md-6 col-sm-12">
+            <img src="assets/img/brand3.png" alt="" class="img-fluid col-lg-3 col-md-6 col-sm-12">
+            <img src="assets/img/brand4.png" alt="" class="img-fluid col-lg-3 col-md-6 col-sm-12">
+        </div>
+    </section>
+    <!-- End Brand -->
+
+    <!--  New -->
+
+    <section id="new" class="w-100">
+        <div class="row p-0 m-0">
+            <!--  One -->
+            <div class="one col-lg-4 col-md-12 col-sm-12 p-0">
+                <img src="assets/img/2.jpg" alt="" class="img-fluid">
+                <div class="details">
+                    <h2>Extreamly Awesome Shoes</h2>
+                    <button class="text-uppercase">Shop Now</button>
+                </div>
+            </div>
+            <!--  Two -->
+            <div class="one col-lg-4 col-md-12 col-sm-12 p-0">
+                <img src="assets/img/1.jpg" alt="" class="img-fluid">
+                <div class="details">
+                    <h2>Your Awesome T-shirt</h2>
+                    <button class="text-uppercase">Shop Now</button>
+                </div>
+            </div>
+
+            <!--  Three -->
+            <div class="one col-lg-4 col-md-12 col-sm-12 p-0">
+                <img src="assets/img/3.jpg" alt="" class="img-fluid">
+                <div class="details">
+                    <h2>Awesome Bags</h2>
+                    <button class="text-uppercase">Shop Now</button>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- End New -->
     
 
 
