--- a/single_product.html
+++ b/single_product.html
@@ -75,6 +75,9 @@
                         <div class="small-img-col">
                             <img src="assets/img/1.jpg" alt="" width="100%"  class="small-img">
                         </div>
+                        <div class="small-img-col">
+                          <img src="assets/img/1.jpg" alt="" width="100%"  class="small-img">
+                      </div>
                     </div>
                 </div>
 
