--- a/account.html
+++ b/account.html
@@ -72,18 +72,15 @@
                     <p><a href="" id="logout-btn">Logout</a></p>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-ms-12">
-                <form action="" class="account-form">
+            <div class="col-lg-6 col-md-12 col-ms-12">
+                <form action="" id="account-form">
                     <h3>Change Password</h3>
                     <hr class="mx-auto">
                     <div class="form-group">
                         <label for="">Password</label>
                         <input type="password" name="password" id="account-password" class="form-control" placeholder="password" required/>
                     </div>
-                    <div class="form-group">
-                        <label for="">Password</label>
-                        <input type="password" name="password" id="account-password" class="form-control" placeholder="password" required/>
-                    </div>
+        
                     <div class="form-group">
                         <label for="">Confirm Password</label>
                         <input type="password" name="confirmpassword" id="account-password-confirm" class="form-control" placeholder="Confirm Password" required/>
@@ -97,6 +94,35 @@
         </div>
     </section> 
     <!-- End Account -->
+
+    
+    <!--  Orders -->
+    <section class="orders container my-5 py-3">
+        <div class="container mt-5 text-center">
+            <h2 class="font-weight-bolde">Your Orders</h2>
+            <hr class="mx-auto">
+        </div>
+        <table class="mt-5 py-5">
+            <tr>
+                <th>Product</th>
+                <th>Date</th>
+            </tr>
+            <tr>
+                <td>
+                    <div class="product-info">
+                        <img src="assets/img/shoes.jpg" alt="">
+                        <div>
+                            <p class="mt-3">White Shoes</p>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <span>28-11-2020</span>
+                </td> 
+            </tr>
+        </table>
+    </section>
+    <!--  End Orders -->
 
 
     <!--  Footer -->
