--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
 
               <li class="nav-item">
-                <i class="fas fa-bag-shopping"></i>
-                <i class="fa-solid fa-user"></i>
+                <a href="cart.html"><i class="fas fa-bag-shopping"></i></a>
+                <a href="account.html"><i class="fa-solid fa-user"></i></a>
               </li>
 
             </ul>
